--- a/michael.html
+++ b/michael.html
@@ -5,11 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World!</title>
+    <link rel="icon" type="image/x-icon" href="eztitle.jpg">
 </head>
 <body>
-<h1><center>Michael Scott</center></h1>
-<img src=michael-scott-quotes.jpg>
-<p> This is Michael Scott! he is the branch manager of a major paper company called dunder mifflin in the show called "The Office". He is 43 years old and single with no kids. He spends most of his time at work entertaining his employyes or at acting class.</p>
+<h1> Michael Scott</h1>
+<img src="michael-scott-quotes.jpg" alt="Michael Scott smiling"
+  width="500"
+  height="300">
+<p>This is Michael Scott! he is the branch manager of a major paper company called dunder mifflin in the show called "The Office". He is 43 years old and single with no kids. He spends most of his time at work entertaining his employyes or at acting class.</p>
+<nav>
+        <u1 class="navgation links">
+            <li><a href="michael.html">Home</a></li>
+            <li><a href="section1.html">Awards won</a></li>
+            <li><a href="section2.html">Other Movies and Shows</a></li>
+            <li><a href="Section3.html">Fun Facts</a></li>
+            <li><a href="Section4.html">family</a></li>
+            <li><a href="Contact info.html">Contact us</a></li>
+        </u1>
+</nav>
 <h2>Awards won for his acting career</h2>
 <li>2006 He achieved the "Golden Globe Award" ror his performance in the show "The Office"</li>
 <li>2006 also won a different award called the Writiers Guild of America for his episode he wrote titled "Casino Night" in the show "The Office"</li>
@@ -33,5 +46,8 @@
 <P> Michael Scott gets married to his wife named Nancy in 1995 they grow up and have two kids</P>
 <li>His kids are one boy and one girl the boy is named Johnny and the girl is named elisabeth.</li>
 <Li>Johnny is 18yrs old and elisabeth is 21yrs old</Li>
+<h6>Call us Or email Us!</h6>
+<li><a href="tel:5593054590">Call us at 559-305-4590</a></li>
+<li><a href= "mailto: michaelscootbout@yahoo.com">Send Email</a></li>
 </body>
 </html>
